--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "start": "set NODE_ENV=dev&&nodemon server.ts",
+    "start": "nodemon server.ts",
     "build": "tsc",
-    "deploy": "yarn build && git add . && git commit -m \"Add something...\" && git push"
+    "deploy": "npm run build && git add . && git commit -m \"Add something...\" && git push"
   },
   "author": "",
   "license": "ISC",
@@ -18,7 +18,10 @@
     "lodash": "^4.17.21",
     "node-fetch": "2",
     "nodemon": "^2.0.20",
-    "ts-node": "^10.9.1"
+    "ts-node": "^10.9.1",
+    "bybit-api": "^3.4.2",
+    "proxy-from-env": "^1.1.0",
+    "restler": "^3.4.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.14",
