--- a/package.json
+++ b/package.json
@@ -13,15 +13,15 @@
   "dependencies": {
     "axios": "^1.2.0",
     "body-parser": "^1.20.1",
+    "bybit-api": "^3.5.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "lodash": "^4.17.21",
     "node-fetch": "2",
     "nodemon": "^2.0.20",
-    "ts-node": "^10.9.1",
-    "bybit-api": "^3.4.2",
     "proxy-from-env": "^1.1.0",
-    "restler": "^3.4.0"
+    "restler": "^3.4.0",
+    "ts-node": "^10.9.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.14",
