--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "devDependencies": {
     "@types/express": "^4.17.14",
     "@types/express-ws": "^3.0.1",
+    "@types/lodash": "^4.14.194",
     "@types/node": "^18.11.9",
     "@types/node-fetch": "^2.6.2",
     "typescript": "^4.9.3"
