--- a/package.json
+++ b/package.json
@@ -16,8 +16,9 @@
     "bybit-api": "^3.5.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "hpagent": "^1.2.0",
     "lodash": "^4.17.21",
-    "node-fetch": "2",
+    "node-fetch": "^2.6.9",
     "nodemon": "^2.0.20",
     "proxy-from-env": "^1.1.0",
     "restler": "^3.4.0",
