--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@logtail/node": "^0.4.0",
     "axios": "^1.2.0",
     "body-parser": "^1.20.1",
     "bybit-api": "^3.5.0",
