--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "nodemon": "^2.0.20",
     "proxy-from-env": "^1.1.0",
     "restler": "^3.4.0",
-    "ts-node": "^10.9.1"
+    "ts-node": "^10.9.1",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.14",
